# trading212-tax-calculator-PL

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
calculators/: calculator_interface.py  dividend_calculator.py  fifo_calculator.py  interest_calculator.py
config/: settings.py  tax_treaties.py
data/: complete_dataset.csv  part1_dataset.csv  part2_dataset.csv
exporters/: excel_exporter.py  exporter_interface.py  reportlab_exporter.py  tax_form_exporter.py
models/: country.py  portfolio.py  tax_data.py  transaction.py
output/: tax_report.xlsx
parsers/: parser_interface.py  trading212_parser.py
services/: company_info_service.py  exchange_rate_service.py  isin_service.py  service_factory.py
tests/: test_calculator_error_handling.py  test_dividend_correctness.py  test_exceptions.py  test_fifo_correctness.py  test_integration_end_to_end.py  test_parser_error_handling.py  test_service_error_handling.py
tests/fixtures/: invalid_data.csv  invalid_format.csv  valid_trading212.csv
utils/: date_utils.py  env_config.py  exceptions.py  logging_config.py  validation.py
